# thuisbatterij

./: .gitignore  README.md  pyproject.toml
config/: user.example.toml
src/sim/: __init__.py  aging.py  battery.py  cli.py  config.py  data.py  economics.py  montecarlo.py  prices.py  questdb.py  report.py  simulate.py  strategies.py  sweep.py  userconfig.py
tests/: test_aging.py  test_battery.py  test_cli.py  test_data.py  test_montecarlo.py  test_prices.py  test_simulate.py  test_strategies.py
