[project]
name = "thuisbaterij-sim"
version = "0.2.0"
description = "Battery simulation against historical QuestDB data + EPEX/imbalance prices"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0",
    "numpy>=2.4",
    "requests>=2.33",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.2",
    "entsoe-py>=0.8",
    "pyarrow>=24.0.0",
    "numba>=0.65",
    "scipy>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[project.scripts]
thuisbat-sim = "sim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true
